<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyActivity"
    android:background="@color/blubackground"
    android:padding="20dp"
    android:id="@+id/layoutverify">

    <TextView
        android:id="@+id/veracc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verifyacc"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="@id/layoutverify"
        app:layout_constraintBottom_toBottomOf="@id/layoutverify"
        app:layout_constraintLeft_toLeftOf="@id/layoutverify"
        app:layout_constraintRight_toRightOf="@id/layoutverify"
        app:layout_constraintVertical_bias="0.270"
        android:textSize="35dp"
        android:fontFamily="@font/robotolight" />

    <TextView
        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/code"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/veracc"
        app:layout_constraintLeft_toLeftOf="@id/layoutverify"
        app:layout_constraintRight_toRightOf="@id/layoutverify"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/robotolight"/>

    <EditText
        android:id="@+id/enter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/code"
        android:layout_marginTop="40dp"
        android:hint="@string/enter"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:fontFamily="@font/robotolight"
        android:gravity="center"
        android:textSize="15dp"/>

    <com.google.android.material.button.MaterialButton style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/buttonsend"
        app:strokeColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/enter"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/buttonsend"
        app:layout_constraintLeft_toLeftOf="@id/layoutverify"
        app:layout_constraintRight_toRightOf="@id/layoutverify"
        android:layout_marginTop="10dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nocode"
            android:textColor="@color/white"
            android:fontFamily="@font/robotolight"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend"
            android:fontFamily="@font/robotobold"
            android:textColor="@color/white"
            android:layout_marginStart="3dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>