<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HampirActivity"
    android:background="@color/blubackground"
    android:id="@+id/layouthampir"
    android:padding="20dp">

    <TextView
        android:id="@+id/almost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/almost"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:fontFamily="@font/robotolight"
        app:layout_constraintTop_toTopOf="@+id/layouthampir"
        app:layout_constraintLeft_toLeftOf="@+id/layouthampir"
        app:layout_constraintRight_toRightOf="@+id/layouthampir"
        app:layout_constraintBottom_toBottomOf="@id/layouthampir"
        app:layout_constraintVertical_bias="0.3"/>

    <TextView
        android:id="@+id/thanks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/thanks"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="@+id/layouthampir"
        app:layout_constraintRight_toRightOf="@+id/layouthampir"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/almost"
        android:layout_marginTop="10dp"/>

    <com.google.android.material.button.MaterialButton style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:id="@+id/buttonverify"
        app:strokeColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify"
        android:textColor="@color/white"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/thanks"
        />

</androidx.constraintlayout.widget.ConstraintLayout>